--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,12 +7,12 @@ steps:
   - name: 'hashicorp/terraform:0.11.7'
     args: ['init']
     id: terraform-init
-  - name: 'hashicorp/terraform:0.11.7'
-    args: ['workspace', 'select', '$_GCP_PROJECT']
-    id: terraform-workspace-select
-  - name: 'hashicorp/terraform:0.11.7'
-    args: ['workspace', 'list']
-    id: terraform-workspace-list
+    #  - name: 'hashicorp/terraform:0.11.7'
+    #    args: ['workspace', 'select', '$_GCP_PROJECT']
+    #    id: terraform-workspace-select
+    #  - name: 'hashicorp/terraform:0.11.7'
+    #    args: ['workspace', 'list']
+    #    id: terraform-workspace-list
   - name: 'hashicorp/terraform:0.11.7'
     args: ['plan']
     id: terraform-plan
