--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -16,6 +16,6 @@ steps:
   - name: 'hashicorp/terraform:0.11.7'
     args: ['plan']
     id: terraform-plan
-    #  - name: 'hashicorp/terraform:0.11.7'
-    #    args: ['apply', '-auto-approve']
-    #    id: terraform-apply
+  - name: 'hashicorp/terraform:0.11.7'
+    args: ['apply', '-auto-approve']
+    id: terraform-apply
