--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -10,6 +10,6 @@ steps:
   - name: 'hashicorp/terraform:0.11.7'
     args: ['apply', '-auto-approve']
     id: terraform-apply
-    #  - name: gcr.io/cloud-builders/gcloud
-    #    args: ['source', 'repos', 'clone', 'default']
-    #    id: gcloud-clone
+  - name: gcr.io/cloud-builders/gcloud
+    args: ['source', 'repos', 'clone', 'default']
+    id: gcloud-clone
