--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,5 +1,4 @@
 # 各プロジェクト用のトリガー作成後に「代入変数」で以下を設定
-# _GCP_PROJECT = tp-fclinebiz-PROJECT_NAME
 steps:
   - name: 'hashicorp/terraform:0.11.7'
     args: ['init']
@@ -10,4 +9,10 @@ steps:
   - name: 'hashicorp/terraform:0.11.7'
     args: ['apply', '-auto-approve']
     id: terraform-apply
+ - name: 'gcr.io/cloud-builders/gcloud'
+  entrypont: bash
+  args:
+  - '-c'
+  - | 
+  gcloud compute instances list
 
