--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,15 +1,8 @@
 steps:
-# GKEクラスターに接続
+steps:
   - name: 'gcr.io/cloud-builders/gcloud'
     entrypoint: bash
     args: 
     - -c
     - |
-      gcloud beta container clusters get-credentials your-first-cluster-1 --region asia-northeast1 --project yoshimura-test
-# GKE操作
-  - name: 'gcr.io/cloud-builders/kubectl'
-    entrypoint: bash
-    args: 
-    - -c
-    - |
-      kubectl get node
+      gcloud config list
