--- a/go-web/cloudbuild.yaml
+++ b/go-web/cloudbuild.yaml
@@ -1,5 +1,18 @@
 steps:
     - name: 'gcr.io/cloud-builders/docker'
-      args: ['build', '-f', 'Dockerfile', '--tag=gcr.io/yoshimura-test/sample:master', '.']
+      args: ['build', '-f', 'Dockerfile', '--tag=gcr.io/yoshimura-test/yoshimura:1.2', '.']
     - name: 'gcr.io/cloud-builders/docker'
-      args: ["push", "gcr.io/yoshimura-test/sample:master"]
+      args: ["push", "gcr.io/yoshimura-test/yoshimura:1.2"]
+    - name: 'gcr.io/cloud-builders/gcloud'
+      entrypoint: bash
+      args:
+      - -c
+      - |
+        gcloud beta container clusters get-credentials your-first-cluster-1 --region asia-northeast1 --project yoshimura-test
+    - name: 'gcr.io/cloud-builders/kubectl'
+      entrypoint: bash
+      args:
+      - -c
+      - |
+        kubectl apply -f k8s.yaml
+
