Ingress のアップデート

--- a/go-web/sample.yaml
+++ b/go-web/sample.yaml
@@ -37,7 +37,7 @@ spec:
     port: 8080
     targetPort: 8080
 ---
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
     name: ingress
@@ -50,6 +50,9 @@ spec:
   - http:
       paths:
       - path: /go-web
+        pathType: ImplementationSpecific
         backend:
-          serviceName: go-web
-          servicePort: 8080
+          service:
+            name: go-web
+            port:
+              number: 8080
